# DirectKeycast

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
includes/: CTimer.h  InitConsole.h  config.h  d2d.h  globals.h  hook.h  main.h  utils.h  window.h
scripts/: build.sh  lcompile.ps1  lcompile_release.ps1  llaunch.ps1  lrun.ps1  prepare_env.py
scripts/config_files/: .clangd  CMakeLists.txt
src/: config.cpp  d2d.cpp  hook.cpp  main.cpp  utils.cpp  window.cpp
